--- a/services/app-web/src/pages/App/AppBody.module.scss
+++ b/services/app-web/src/pages/App/AppBody.module.scss
@@ -9,6 +9,7 @@
 }
 
 .mainContent {
+    position: relative;
     flex: 1 0 auto;
     width: 100%;
     display: flex;
